--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ quarkus.datasource.devservices.db-name=quarkusdb
 quarkus.datasource.devservices.username=quarkus
 quarkus.datasource.devservices.password=quarkus
 quarkus.datasource.devservices.port=3307
+quarkus.cache.caffeine."user-cache".expire-after-write=10S
+quarkus.cache.caffeine."user-cache".maximum-size=100
