--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ quarkus.datasource.devservices.db-name=quarkusdb
 quarkus.datasource.devservices.username=quarkus
 quarkus.datasource.devservices.password=quarkus
 quarkus.datasource.devservices.port=3307
+quarkus.cache.redis."user-cache".expire-after-write=10s
+#quarkus.cache.caffeine."user-cache".maximum-size=100
+quarkus.log.level=INFO
+quarkus.log.file.level=DEBUG
+quarkus.log.file.rotation.max-file-size=10M
+# Usa Dev Services (Testcontainers) per DB e Redis nei test
+%test.quarkus.datasource.db-kind=mysql
+%test.quarkus.datasource.devservices.enabled=true
+%test.quarkus.redis.devservices.enabled=true
+# Schema pulito ad ogni run test
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
