feat: added kafka examples

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ quarkus.datasource.devservices.db-name=quarkusdb
 quarkus.datasource.devservices.username=quarkus
 quarkus.datasource.devservices.password=quarkus
 quarkus.datasource.devservices.port=3307
+# Configurazione Producer (outgoing)
+mp.messaging.outgoing.users-out.connector=smallrye-kafka
+mp.messaging.outgoing.users-out.topic=users.events
+# Configurazione Consumer (incoming)  
+mp.messaging.incoming.users-in.connector=smallrye-kafka
+mp.messaging.incoming.users-in.topic=users.events
+mp.messaging.incoming.users-in.group.id=user-service
+mp.messaging.incoming.users-in.auto.offset.reset=earliest
