feat: added https configuration both application level and with nginx

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ quarkus.datasource.devservices.db-name=quarkusdb
 quarkus.datasource.devservices.username=quarkus
 quarkus.datasource.devservices.password=quarkus
 quarkus.datasource.devservices.port=3307
+#queste solo se non usi nginx
+# quarkus.http.ssl-port=8443
+# quarkus.http.ssl.certificate.key-store-file=./certs/server-keystore.p12
+# quarkus.http.ssl.certificate.key-store-password=test
+# quarkus.http.insecure-requests=redirect
