feat: updated nginx configuration; also handling cors

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,34 @@
 # Redirect HTTP -> HTTPS (308 = preserva il metodo, es. POST rimane POST)
 server {
-    listen 80;
-    server_name localhost;
+    listen 81 default_server;
+    listen [::]:81 default_server;
+    server_name _;
 
-    return 308 https://$host$request_uri;
+    # return 308 https://$host$request_uri;
+
+    location / {
+    proxy_pass http://host.docker.internal:8080;
+    
+    # Headers CORS
+    add_header 'Access-Control-Allow-Origin' 'https://www.google.com' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    
+    # Gestione preflight OPTIONS
+    if ($request_method = OPTIONS) {
+        add_header 'Access-Control-Allow-Origin' 'https://www.google.com' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+        return 204;
+    }
+}
 }
 
 # HTTPS termination + reverse proxy
 server {
-    listen 443 ssl;
-    server_name localhost;
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server;
+    server_name _;
 
     # Cert self-signed
     ssl_certificate     /etc/nginx/certs/server.crt;
