feat: removed cors configurations

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,24 +4,7 @@ server {
     listen [::]:81 default_server;
     server_name _;
 
-    # return 308 https://$host$request_uri;
-
-    location / {
-    proxy_pass http://host.docker.internal:8080;
-    
-    # Headers CORS
-    add_header 'Access-Control-Allow-Origin' 'https://www.google.com' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
-    
-    # Gestione preflight OPTIONS
-    if ($request_method = OPTIONS) {
-        add_header 'Access-Control-Allow-Origin' 'https://www.google.com' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
-        return 204;
-    }
-}
+    return 308 https://$host$request_uri;
 }
 
 # HTTPS termination + reverse proxy
