feat: added CORS configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ quarkus.datasource.devservices.port=3307
 # quarkus.http.ssl.certificate.key-store-file=./certs/server-keystore.p12
 # quarkus.http.ssl.certificate.key-store-password=test
 # quarkus.http.insecure-requests=redirect
+#anche queste solo se non usi nginx
+# quarkus.http.cors=true
+# quarkus.http.cors.origins=https://www.google.com
+# quarkus.http.cors.methods=GET,POST,PUT,DELETE
+# quarkus.http.cors.headers=Content-Type,Authorization
+# quarkus.http.cors.exposed-headers=Location
