feat: added jwt handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ quarkus.datasource.devservices.db-name=quarkusdb
 quarkus.datasource.devservices.username=quarkus
 quarkus.datasource.devservices.password=quarkus
 quarkus.datasource.devservices.port=3307
+smallrye.jwt.sign.key.location=private8.pem
+smallrye.jwt.new-token.issuer=https://auth.example.com
+smallrye.jwt.new-token.audience=my-service
+smallrye.jwt.new-token.lifespan=900
+mp.jwt.verify.publickey.location=public8.pem
+mp.jwt.verify.issuer=https://auth.example.com
