feat: added check on audiences

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ smallrye.jwt.new-token.audience=my-service
 smallrye.jwt.new-token.lifespan=900
 mp.jwt.verify.publickey.location=public8.pem
 mp.jwt.verify.issuer=https://auth.example.com
+mp.jwt.verify.audiences=my-service
