--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ quarkus.datasource.devservices.db-name=quarkusdb
 quarkus.datasource.devservices.username=quarkus
 quarkus.datasource.devservices.password=quarkus
 quarkus.datasource.devservices.port=3307
+quarkus.http.port=8081
+# OIDC Configuration
+quarkus.oidc.auth-server-url=http://localhost:8080/realms/demo
+quarkus.oidc.client-id=quarkus-app
+quarkus.oidc.credentials.secret=ZnN4TQvWs2CjJiqjIWZireL89boG4l9i
+quarkus.oidc.application-type=service
+# JSON Mapping
+quarkus.jackson.fail-on-unknown-properties=false
