feat: updated openshift setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ quarkus.datasource.devservices.db-name=quarkusdb
 quarkus.datasource.devservices.username=quarkus
 quarkus.datasource.devservices.password=quarkus
 quarkus.datasource.devservices.port=3307
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME:quarkus}
+quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD:quarkus}
+quarkus.datasource.jdbc.url=${QUARKUS_DATASOURCE_JDBC_URL:jdbc:mysql://mysql:3306/quarkusdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
